Bugherd 1255 Text align

--- a/wp-content/themes/liveRamp-Template/src/assets/scss/acf/_carded_square_6-card_content.scss
+++ b/wp-content/themes/liveRamp-Template/src/assets/scss/acf/_carded_square_6-card_content.scss
@@ -35,7 +35,7 @@
 			padding: 1.5rem;
 			margin-bottom: 2rem;
 			& > :last-child { 
-				margin-top: auto;
+				margin-top: 0;
 			}
 			.icon {
 				 height: 55px;
